--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,17 @@
             android:name="com.allen.hq.bubble.SurfaceActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
+            <!-- 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter> -->
+        </activity>
+        <activity
+            android:name="com.allen.hq.keygurad.SettingActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
